# mast-toolkit

./: Dockerfile  Makefile  Procfile  README.md  pyproject.toml
app/: Dockerfile
app/mast_toolkit/: apps.py  consts.py  forms.py  models.py  views.py
app/mast_toolkit/migrations/: 0001_initial.py  0002_alter_response_id_alter_survey_confirmation_message_and_more.py  0002_response_industry_response_is_complete_and_more.py  0002_survey_benchmark_scope_alter_response_id_and_more.py  0002_survey_use_custom_industries_alter_response_id_and_more.py  0003_alter_response_id_alter_response_industry_and_more.py  0003_alter_response_id_alter_survey_id_and_more.py  0003_response_self_assess_secure_and_more.py  0004_alter_response_id_alter_response_self_assess_secure_and_more.py  0004_response_industry_response_seniority_response_tools_and_more.py  0004_response_self_assess_secure_and_more.py  0005_response_other_tool_alter_response_id_and_more.py  0006_alter_response_id_alter_survey_id_and_more.py  0007_response_is_complete_alter_response_actions_audit_1_and_more.py  0008_alter_response_id_alter_response_tools_and_more.py
app/mast_toolkit/templates/: base.html
app/mast_toolkit/templates/components/: survey_management_form.html
app/mast_toolkit/templates/mast/: create_survey.html
app/mast_toolkit/templates/mast/dashboard/: base.html  crosstab.html  delete.html  delete_confirmation.html  detail.html  preview_all.html  report.html  (+2 more)
app/mast_toolkit/templates/static/: home.html
app/web/: settings.py  urls.py
dev/: README.md  dev.env  docker-compose.yaml  make_data.py
(+18 files in other folders)
