[tool.poetry]
name = "mast-toolkit"
version = "0.1.0"
description = ""
authors = ["Samuel Spencer <theodore.therone@gmail.com>"]
readme = "README.md"
packages = [
    { include = "mast_toolkit", from = "app" },
    { include = "web", from = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
dj-database-url = "^2.3.0"
python-decouple = "^3.8"
django-anymail = "^12.0"
gunicorn = "^23.0.0"
whitenoise = "^6.8.2"
shortuuid = "^1.0.13"
plotly = "^5.24.1"
dash = "^2.18.2"
pandas = "^2.2.3"
weasyprint = "^63.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
