[project]
name = "mast-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url~=2.3.0",
    "django==5.1.4",
    "django-anymail~=12.0",
    "gunicorn~=23.0.0",
    "whitenoise~=6.8.2",
    "shortuuid~=1.0.13",
    "plotly~=5.24.1",
    "dash~=2.18.2",
    "pandas~=2.2.3",
    "weasyprint~=63.1",
    "psycopg2~=2.9.10",
]

[tool.setuptools]
package-dir = { "" = "app" }
packages = ["mast_toolkit", "web"]